added new header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header> 
      <section>
          <div>
-            <h3>ParaRoz . <img class="world-img" src="download-removebg-preview.png" alt="">;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <h3>ParaRoz . <img class="world-img" src="download-removebg-preview.png" alt="">;&nbsp;&nbsp;
               <a href="">Home</a>
               &nbsp;&nbsp;&nbsp;&nbsp;
               <a href="">About</a>
